Download openjdk and extract manually