@@ -1,7 +1,6 @@
 #!/bin/bash
 
-/usr/lib/jvm/java-15-openjdk-amd64/bin/java \
-  "--enable-preview" \
+/opt/jdk-15/bin/java \
   "-Xmx2g" \
   "-Dwebdriver.gecko.driver=/usr/bin/geckodriver" \
   "-Dwebdriver.firefox.logfile=/tmp/firefox.log" \
