@@ -19,8 +19,7 @@ sudo kubectl get services --all-namespaces
 echo "TEST SERVICES"
 sudo kubectl describe service randomquotes -n randomquotes-test
 
-/usr/lib/jvm/java-15-openjdk-amd64/bin/java \
-  "--enable-preview" \
+/opt/jdk-15/bin/java \
   "-Xmx2g" \
   "-Dwebdriver.gecko.driver=/usr/bin/geckodriver" \
   "-DstepPause=$STEP_PAUSE" \
