@@ -1,8 +1,7 @@
 #!/bin/bash
 
 if [ -n "$WISTIA_MEDIA_ID" ]; then
-  /usr/lib/jvm/java-15-openjdk-amd64/bin/java \
-    "--enable-preview" \
+  /opt/jdk-15/bin/java \
     "-Xmx2g" \
     "-Dwebdriver.gecko.driver=/usr/bin/geckodriver" \
   "-DstepPause=$STEP_PAUSE" \
