@@ -2,7 +2,6 @@ if (-not [string]::IsNullOrEmpty($env:WISTIA_MEDIA_ID))
 {
 
     & "C:\Program Files\OpenJDK\$( (Get-ChildItem "C:\Program Files\OpenJDK\")[0] )\bin\java" `
-    "--enable-preview" `
     "-Xmx2g" `
     "-Dwebdriver.gecko.driver=C:\tools\geckodriver.exe" `
     "-DstepPause=$STEP_PAUSE" `
